# armin_manipulator_public

./: README.md
armin_base_ikfast_ikfast_plugin/: CMakeLists.txt  armin_base_ikfast_moveit_ikfast_plugin_description.xml  package.xml
armin_base_ikfast_ikfast_plugin/src/: armin_base_ikfast_ikfast_moveit_plugin.cpp  armin_base_ikfast_ikfast_solver.cpp
armin_description/: CMakeLists.txt  package.xml  urdf.rviz  urdf_limited.rviz
armin_description/cmake/: armin_descriptionConfig.cmake
armin_description/launch/: armin_upload.launch  display.launch  display_limited.launch  gazebo.launch
armin_description/meshes/: a1_link.stl  a2_link.stl  a3_link.stl  a4_link.stl  a5_link.stl  a6_link.stl  base_link.stl
armin_description/urdf/: armin.gazebo.xacro  armin.transmission.xacro  armin.urdf.xacro  armin_joint_limited_robot.urdf.xacro  armin_robot.urdf.xacro  common.gazebo.xacro
armin_gazeboed/: CMakeLists.txt  package.xml  rviz_at_gazebo.rviz
armin_gazeboed/config/: armin_control.yaml
armin_gazeboed/launch/: armin_control.launch  armin_follow_control.launch  armin_follow_control_no_remap.launch  armin_world.launch  armin_world_remap.launch  armin_world_remap_only_gazebo.launch  armin_world_remap_prepare_gazebo.launch  empty_world.launch
armin_manipulators/: CMakeLists.txt  config.h.in  package.xml
armin_manipulators/launch/: sphere_manipulator.launch
armin_manipulators/msg/: OptionSetting.msg
armin_manipulators/src/: chained_ik.cpp  joint_states_keeper.cpp  joystick_manipulator.cpp  (+5 more)
armin_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+32 files in other folders)
