<package format="2">
  <name>armin_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for armor</p>
    <p>This package contains configuration data, 3D models and launch files
for armor robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
